--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,8 @@
     min-height: 600px;
     max-height: 756px;
     margin-left: 64px;
-    /* background:#F2F2F2; */
+    background-color: #F2F2F2;
+    z-index: -10;
     display: flex;
     position: relative;
 }
@@ -60,13 +61,10 @@
     color: #2F80ED;
 }
 
-.header__main-illustration {
+.header__smain-illustration {
     height: 608px;
     width: 756px;
     position: absolute;
-    bottom: 0;
-    right: 0;
-    z-index: 40;
 }
 
 
@@ -82,20 +80,11 @@
     z-index: -1;
 }
 
-
-/* including elements with key-value modifiers */
-
-.table__cell_theme_dark {
-    width: 200px;
-    color: white;
-    margin-right: 0;
-    margin-top: 80px;
-}
-
 .description {
     display: flex;
     justify-content: center;
     margin-top: 100px;
+    z-index: 6;
     margin-bottom: 100px;
 }
 
@@ -113,6 +102,10 @@
     color: #2F80ED;
     line-height: 1.2;
     font-size: 18px;
+}
+
+.main-text {
+    width: 80%;
 }
 
 .span-accent {
@@ -193,6 +186,8 @@ ul {
     margin-top: 100px;
     text-align: center;
     position: relative;
+    background-color: #F2F2F2;
+    z-index: -10;
 }
 
 .feynman__smain-illustration {
@@ -201,6 +196,8 @@ ul {
     position: absolute;
     height: 637px;
     width: 867px;
+    bottom: 0;
+    left: 0;
 }
 
 .feynman__title {
@@ -229,13 +226,21 @@ ul {
 }
 
 .kaufman {
-    margin-top: 90px;
-    margin-bottom: 90px;
+    padding-top: 90px;
+    padding-bottom: 90px;
     background-color: black;
     display: block;
     text-align: center;
     position: relative;
     color: white;
+    z-index: -10;
+}
+
+.table__cell_theme_dark {
+    width: 200px;
+    color: white;
+    margin-right: 0;
+    margin-top: 80px;
 }
 
 .section-title_theme_dark {
@@ -244,7 +249,6 @@ ul {
     line-height: 69px;
     font-size: 60px;
     font-weight: bold;
-    z-index: 3;
 }
 
 .section-subtitle_theme_dark {
@@ -263,7 +267,6 @@ ul {
     margin: auto;
     text-align: left;
     position: relative;
-    z-index: -1;
 }
 
 .table__text_theme_dark {
@@ -293,6 +296,7 @@ ul {
     right: -124px;
     bottom: 0;
     overflow: hidden;
+    z-index: -3;
 }
 
 .footer {
@@ -355,5 +359,3 @@ ul {
     font-weight: normal;
     padding: 0;
 }
-
-.footer__column-link {}
