--- a/styles/style.css
+++ b/styles/style.css
@@ -181,7 +181,7 @@ ul {
     line-height: 1.2;
     font-size: 18px;
     font-weight: normal;
-    padding-left: 0;
+    padding: left 0;
 }
 
 .feynman {
@@ -205,6 +205,7 @@ ul {
 .feynman__title {
     width: 775px;
     margin: auto;
+    padding-top: 100px;
     line-height: 1.15;
     font-size: 120px;
     font-weight: bold;
@@ -242,7 +243,7 @@ ul {
 .table__cell_theme_dark {
     width: 200px;
     color: white;
-    margin-right: 0;
+    margin-right: 10px;
     margin-top: 80px;
 }
 
@@ -256,8 +257,8 @@ ul {
 
 .section-subtitle_theme_dark {
     width: 60%;
-    margin-top: 20px;
     margin: auto;
+    margin-top: 20px;
     line-height: 34px;
     font-size: 24px;
     font-weight: normal;
