background-color of kaufman section

--- a/styles/style.css
+++ b/styles/style.css
@@ -226,7 +226,7 @@ ul {
 .kaufman {
     padding-top: 90px;
     padding-bottom: 90px;
-    background-color: black;
+    background-color: #1F1F1F;
     display: block;
     text-align: center;
     position: relative;
